# ros2-modeling-and-simulation

./: README.md
gazebo_turtle_bridge_pkg/: package.xml  setup.cfg  setup.py
gazebo_turtle_bridge_pkg/gazebo_turtle_bridge_pkg/: bridge.py
mobile_robot_bringup/: CMakeLists.txt  package.xml
mobile_robot_bringup/launch/: mobile_robot.launch.py  mobile_robot_gzsim.launch.py
mobile_robot_description/: CMakeLists.txt  package.xml
mobile_robot_description/rviz/: mobile_robot.rviz
mobile_robot_description/urdf/: mobile_robot.urdf.xacro  mobile_robot.xacro  mobile_robot_gazebo.xacro  mobile_robot_gzsim.urdf.xacro
mobile_robot_description/worlds/: edges_academy.sdf
