<?xml version="1.0"?>
<package format="3">
  <name>gazebo_turtle_bridge_pkg</name>
  <version>0.0.0</version>
  <description>Bridge between Gazebo robot and Turtlesim for velocity mirroring</description>
  <maintainer email="kerolushany8@gmail.com">Kerolus Hany</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
